<?xml version="1.0"?>
<package>
  <name>tmc_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>
    mimic_plugin for interpreting mimic tag for urdf.
  </description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Akiyoshi Ochiai</author>
  <author>Kazuhito Tanaka</author>
  <author>Kazuto Murase</author>
  <author>Koji Terada</author>
  <author>Hiromichi Nakashima</author>
  <author>Takafumi Mizuno</author>
  <author>Tamaki Nishino</author>
  <author>Yoshimi Iyoda</author>
  <author>Yosuke Matsusaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_toolbox</build_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_toolbox</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>gazebo_ros_control</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>effort_controllers</test_depend>
</package>
