<?xml version="1.0"?>
<package format="2">
  <name>tmc_gazebo_plugins</name>
  <version>2.0.0</version>
  <description>
    Plugins for gazebo.
  </description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Akiyoshi Ochiai</author>
  <author>Kazuhito Tanaka</author>
  <author>Kazuto Murase</author>
  <author>Koji Terada</author>
  <author>Hiromichi Nakashima</author>
  <author>Takafumi Mizuno</author>
  <author>Tamaki Nishino</author>
  <author>Yoshimi Iyoda</author>
  <author>Yosuke Matsusaka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tmc_control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
